[package]
name = "p7m-userauth"
description = "Rust bindings for the login and authentication API of P7M"
version = "0.11.0"
authors = ["OpenAPI Generator team and contributors"]
edition = "2018"
license = "Apache-2.0"
repository = "https://github.com/projekt7m/userauth-rust"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
[dependencies.reqwest]
version = "^0.11"
default-features = false
features = ["json", "multipart", "rustls-tls"]

[dev-dependencies]
